--- a/SpMVC_One_01_Score/src/main/webapp/WEB-INF/spring/config/mysql.properties
+++ b/SpMVC_One_01_Score/src/main/webapp/WEB-INF/spring/config/mysql.properties
@@ -1,5 +1,5 @@
 ## properties setting
 mysql.driver=com.mysql.cj.jdbc.Driver
 mysql.url=jdbc:mysql://127.0.0.1:3306/score
-mysql.username=root
-mysql.password=12341234
+mysql.username=gbuser
+mysql.password=12345
